Add JSON API Login
